--- a/GameEngineEditor/GameEngineEditor/GameEngineEditor.csproj
+++ b/GameEngineEditor/GameEngineEditor/GameEngineEditor.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Components\BoxCollisionComponent.cs" />
+    <Compile Include="Components\ScriptComponent.cs" />
     <Compile Include="DataManager.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="GameEngineEditor.cs">
